src/objects/FGW_Error__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Errors caught and saved during normal operations</description>
    <fields>
        <fullName>Error_Datetime__c</fullName>
        <description>Date and time at which the error occurred</description>
        <inlineHelpText>Date and time at which the error occurred</inlineHelpText>
        <label>Error_Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Line_Number__c</fullName>
        <description>Line number on which the error occurred, if available</description>
        <inlineHelpText>Line number on which the error occurred, if available</inlineHelpText>
        <label>Error Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Truncated error message</description>
        <inlineHelpText>Truncated error message</inlineHelpText>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Stack_Trace__c</fullName>
        <description>255 characters of the stack trace for this error</description>
        <inlineHelpText>255 characters of the stack trace for this error</inlineHelpText>
        <label>Error Stack Trace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <description>Type of error or exception</description>
        <inlineHelpText>Type of error or exception</inlineHelpText>
        <label>Error Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friendly_Message__c</fullName>
        <description>The user-friendly message for this error, if there is one</description>
        <inlineHelpText>The user-friendly message for this error, if there is one</inlineHelpText>
        <label>Friendly Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FGW Error</label>
</CustomObject>